Choose Destination section done

--- a/index.html
+++ b/index.html
@@ -100,6 +100,23 @@
           <img src="Images/Rectangle 4.png" alt="" />
         </div>
       </section>
+
+      <section id="destination">
+        <div class="title font-size-40">Choose Your Destination</div>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="content">
+          <div class="content-1"><div class="country">Maldives</div></div>
+          <div class="content-2"><div class="country">Indonesia</div></div>
+          <div class="content-3"><div class="country">Srilanka</div></div>
+          <div class="content-4"><div class="country">North America</div></div>
+          <div class="content-5"><div class="country">Kashmir</div></div>
+          <div class="content-6"><div class="country">Bangladesh</div></div>
+          <div class="content-7"><div class="country">Bandarban</div></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
