--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="nav">
         <input type="checkbox" id="nav-check" />
         <div class="nav-header">
-          <div class="nav-title">
+          <div class="nav-brand-name">
             <img src="Images/Group 40071 (2).png" alt="" />
             <span class="paradise">Paradise</span>
             <span class="road">Road</span>
@@ -117,6 +117,76 @@
           <div class="content-7"><div class="country">Bandarban</div></div>
         </div>
       </section>
+
+      <section id="why-choose-us">
+        <div class="title font-size-40">Why Choose Us</div>
+        <p>
+          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+          odio sit massa. Sodales dictumst nec nibh pellentesque.
+        </p>
+        <div class="content">
+          <div class="card card-1">
+            <img src="Images/hotel 1.svg" alt="" />
+            <h3>Handpicked Hotels</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="card card-2">
+            <img src="Images/map 1.svg" alt="" />
+            <h3>World Class Service</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="card card-3">
+            <img src="Images/price-tag 1.svg" alt="" />
+            <h3>Best Price Guarantee</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="news-letter">
+        <div class="form">
+          <h3>Newsletter</h3>
+          <p>Get your daily dose of travel news & tips. Sign up today!</p>
+          <input type="text" placeholder="Enter your name" />
+          <input type="text" placeholder="Enter your email" />
+          <button><a href="">Subscribe</a></button>
+        </div>
+        <div class="img-container">
+          <img src="Images/Rectangle 8 (1).png" alt="" />
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="footer-brand-name">
+        <img src="Images/Group 40071 (2).png" alt="" />
+        <span class="paradise">Paradise</span>
+        <span class="road">Road</span>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
+        blandit orci potenti vulputate. Leo erat maecenas vitae elementum
+        ultricies nullam.
+      </p>
+      <div class="social-link">
+        <a href="#"><i class="fa-brands fa-twitter"></i></a>
+        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#"><i class="fa-brands fa-github"></i></a>
+      </div>
+      <div class="copyright-text">2024, All Rights Reserved.</div>
+    </footer>
   </body>
 </html>
