news letter token done

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
         </div>
         <div class="img-container">
           <img src="Images/Rectangle 8 (1).png" alt="" />
+          <div class="travel-token">
+            <h5>HeroTravel.com</h5>
+            <h2>Save up to 70%</h2>
+          </div>
         </div>
       </section>
     </main>
