review section done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Paradise Road</title>
+    <link
+      rel="shortcut icon"
+      href="Images/Group 40071 (2).png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -44,8 +49,9 @@
         <div class="linear-gradient">
           <h2>Explore Your Travel</h2>
           <p>
-            Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-            adipiscing. In et odio enim ac quis sapien urna eu phasellus.
+            Don't just get there, get there in style. Experience the world, one
+            adventure at a time. Make your trip unforgettable! Making all
+            destinations available around the globe.
           </p>
           <div class="banner-container">
             <input type="text" placeholder="Where go" />
@@ -71,28 +77,32 @@
         <div class="content">
           <div class="title font-size-40">Our Popular Tours</div>
           <p>
-            Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-            odio sit massa. Sodales dictumst nec nibh pellentesque.
+            Dublar Char is a special island in the south part of the Sundarbans
+            mangrove forest. It’s a quiet place with beautiful nature and lively
+            local culture. This article looks at what makes Dublar Char unique,
+            like its role as a fishing village, the yearly Rashmela festival,
+            and the various wildlife living there.
           </p>
           <ul>
             <li>
-              Tempus euismod lacus mauris dignissim quis in ultrices. Magna
-              nullam odio neque diam. Sociis erat at .
+              Book direct to save money. We also offer Budget tours in abroad.
+              Lowest Price guarantee.
             </li>
             <li>
-              Adipiscing ornare pellentesque mauris volutpat tortor vitae platea
-              porta lacus. Lectus suspendisse nullam.
+              Visit the most beautiful and interesting places. Our experienced
+              tour guides will take you to the most beautiful places in asia.
             </li>
             <li>
-              Accumsan eget et turpis praesent lorem egestas enim elit bibendum.
-              Risus at in.
+              Our passionate and experienced tour guides, will bring you up
+              close to locals for interactions.
             </li>
           </ul>
           <p>
-            Amet consectetur. Vulputate commodo felis molestie risus ornare
-            nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-            Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus
-            semper tincidunt.
+            Discover the amazing culture and attractions of Bangladesh on our
+            tour! We’ve carefully selected the best places to visit in our
+            Attractions of Bangladesh Tour. Experience the beauty and history of
+            this enchanting country, where each stop offers a mix of natural
+            wonders and rich cultural heritage.
           </p>
           <a class="btn-common" href="#">Read More</a>
         </div>
@@ -104,8 +114,9 @@
       <section id="destination">
         <div class="title font-size-40">Choose Your Destination</div>
         <p>
-          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-          odio sit massa. Sodales dictumst nec nibh pellentesque.
+          Our travel guides as well as our photos should help you find your next
+          destination.These must-have guides are widely detailed and are real
+          tools to help you travel the way you intend to do.
         </p>
         <div class="content">
           <div class="content-1"><div class="country">Maldives</div></div>
@@ -121,37 +132,138 @@
       <section id="why-choose-us">
         <div class="title font-size-40">Why Choose Us</div>
         <p>
-          Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-          odio sit massa. Sodales dictumst nec nibh pellentesque.
+          Our prestigious collection of family-owned hotels invites you to
+          escape the everyday and experience glorious Britain at its very
+          finest.
         </p>
         <div class="content">
           <div class="card card-1">
             <img src="Images/hotel 1.svg" alt="" />
             <h3>Handpicked Hotels</h3>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              Whether searching for adventure, celebrating a special occasion or
+              seeking a beautiful space to relax and unwind, our stunning
+              properties across England, Scotland and the Channel Islands
+              provide the perfect destinations for your next luxury getaway.
             </p>
           </div>
           <div class="card card-2">
             <img src="Images/map 1.svg" alt="" />
             <h3>World Class Service</h3>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              Whether you are coming for a Bar-Mitzvah, Wedding, Holiday, or
+              Family Vacation, our concierge approach ensures that even the
+              minutest detail is accounted for. With offices in both Israel and
+              USA our clients receive quality, personalized service tailored to
+              meet their specific needs.
             </p>
           </div>
           <div class="card card-3">
             <img src="Images/price-tag 1.svg" alt="" />
             <h3>Best Price Guarantee</h3>
             <p>
-              Amet consectetur. Vulputate commodo felis molestie risus ornare
-              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
-              Habitant adipiscing risus natoque aliquet.
+              Our pricing is updated constantly to ensure you get the best price
+              available online or at your destination. we also protect you
+              against arriving at a destination and finding the same tour or
+              activity offered at a lower price from our operator. If you do
+              happen to find a lower price direct from our operator, simply send
+              us the details and we'll refund the price difference. It's that
+              easy.
             </p>
           </div>
+        </div>
+      </section>
+
+      <section id="cliant-review">
+        <h2 class="title font-size-40">Honest Review</h2>
+        <p>
+          Our happy cliant give us honest Review.Since 1994, we have been
+          proudly providing Aussie travellers with expert advice and
+          unforgettable holidays to some of the world's most beautiful
+          destinations.
+        </p>
+        <div class="cliant-review-content">
+          <div class="card-container">
+            <div class="card">
+              <h3>
+                <span
+                  ><img src="Images/Flag_of_Bangladesh.svg.png" alt="" /></span
+                >Bangladesh
+              </h3>
+              <img src="images/bangladesh_islands.jpg" alt="Avatar" />
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fa-solid fa-user"> </i> Adam Smith
+                </h4>
+                <h4 class="card-rating">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>4.99
+                </h4>
+                <p>
+                  We were really pleased with the package deal and quality of
+                  flights, accommodation and tours. Everything was as promised
+                  and lived up to or exceeded our expectations. Our first choice
+                  room wasn't available but Emma contacted us promptly to make
+                  sure we wanted the alternative and the refund came through
+                  promptly.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <h3>
+                <span><img src="Images/Flag_of_Malaysia.svg" alt="" /></span
+                >Malaysia
+              </h3>
+              <img src="images/malaysia-best-islands.jpg" alt="Avatar" />
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fa-solid fa-user"> </i> Samantha
+                </h4>
+                <h4 class="card-rating">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>
+                  <i class="fa-regular fa-star"></i>3.99
+                </h4>
+                <p>
+                  The travel on line made my expectation. It was very pleasant
+                  and enjoyable holiday for us and our grandson. Everything was
+                  well organised. Thanks for the opportunity to have an
+                  enjoyable holiday.
+                </p>
+              </div>
+            </div>
+            <div class="card">
+              <h3>
+                <span><img src="Images/Flag_of_Egypt.svg.png" alt="" /></span
+                >Egypt
+              </h3>
+              <img src="images/egypt.jpg" alt="Avatar" />
+              <div class="card-body">
+                <h4 class="card-title">
+                  <i class="fa-solid fa-user"> </i> Jonathon
+                </h4>
+                <h4 class="card-rating">
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star"></i>
+                  <i class="fa-solid fa-star-half-stroke"></i>4.99
+                </h4>
+                <p>
+                  A good plus of traveling is that often you get new skills
+                  without difficulty and without even noticing it.
+                </p>
+              </div>
+            </div>
+          </div>
+          <button>
+            <a href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+          </button>
         </div>
       </section>
 
@@ -166,7 +278,7 @@
         <div class="img-container">
           <img src="Images/Rectangle 8 (1).png" alt="" />
           <div class="travel-token">
-            <h5>HeroTravel.com</h5>
+            <h5>ParadiseRoad.com</h5>
             <h2>Save up to 70%</h2>
           </div>
         </div>
@@ -180,9 +292,8 @@
         <span class="road">Road</span>
       </div>
       <p>
-        Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
-        blandit orci potenti vulputate. Leo erat maecenas vitae elementum
-        ultricies nullam.
+        A good plus of traveling is that often you get new skills without
+        difficulty and without even noticing it.
       </p>
       <div class="social-link">
         <a href="#"><i class="fa-brands fa-twitter"></i></a>
