--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
               meet their specific needs.
             </p>
           </div>
+        </div>
+        <div class="card-3-container">
           <div class="card card-3">
             <img src="Images/price-tag 1.svg" alt="" />
             <h3>Best Price Guarantee</h3>
