--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                   ><img src="Images/Flag_of_Bangladesh.svg.png" alt="" /></span
                 >Bangladesh
               </h3>
-              <img src="images/bangladesh_islands.png" alt="Avatar" />
+              <img src="images/images.jfif" alt="Avatar" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Adam Smith
@@ -219,7 +219,7 @@
                 <span><img src="Images/Flag_of_Malaysia.svg" alt="" /></span
                 >Malaysia
               </h3>
-              <img src="images/malaysia-best-islands.png" alt="Avatar" />
+              <img src="images/images (1).jfif" alt="Avatar" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Samantha
@@ -244,7 +244,7 @@
                 <span><img src="Images/Flag_of_Egypt.svg.png" alt="" /></span
                 >Egypt
               </h3>
-              <img src="images/egypt.png" alt="Avatar" />
+              <img src="images/images (2).jfif" alt="Avatar" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Jonathon
