banner section update

--- a/index.html
+++ b/index.html
@@ -53,21 +53,23 @@
             adventure at a time. Make your trip unforgettable! Making all
             destinations available around the globe.
           </p>
-          <div class="banner-container">
-            <input type="text" placeholder="Where go" />
-            <label for="country"></label>
-            <select class="select-box" name="" id="">
-              <option value="">Bangladesh</option>
-            </select>
-            <label for="Select Type"></label>
-            <select class="select-box" name="" id="">
-              <option value="">Select Type</option>
-            </select>
-            <button class="btn-common">
-              <a href="#"
-                ><i class="fa-solid fa-magnifying-glass"></i>Find Now</a
-              >
-            </button>
+          <div class="content">
+            <div class="banner-container">
+              <input type="text" placeholder="Where go" />
+              <label for="country"></label>
+              <select class="select-box" name="" id="">
+                <option value="">Bangladesh</option>
+              </select>
+              <label for="Select Type"></label>
+              <select class="select-box" name="" id="">
+                <option value="">Select Type</option>
+              </select>
+              <button class="btn-common">
+                <a href="#"
+                  ><i class="fa-solid fa-magnifying-glass"></i>Find Now</a
+                >
+              </button>
+            </div>
           </div>
         </div>
       </div>
