deals section added

--- a/index.html
+++ b/index.html
@@ -178,6 +178,64 @@
         </div>
       </section>
 
+      <section id="deals">
+        <h2 class="font-size-40">Deals & Discounts</h2>
+        <p>
+          Whenever or wherever you choose to travel, we have you covered.
+          Discover today’s best travel deals on tours worldwide for your next
+          trip.
+        </p>
+        <div class="img-container img-1">
+          <div class="img-text">
+            <p>
+              <img src="Images/Frame.svg" alt="" /><span>7 Day / 6 Night</span
+              ><img src="Images/Frame (1).svg" alt="" /><span>Max : 10</span
+              ><img src="Images/Frame (2).svg" alt="" /><span>Malaysia</span>
+            </p>
+            <h3>Tour To Satorini</h3>
+            <p>
+              Book your ferry ticket online! In very simple steps you can have
+              your ticket issued in no time.
+            </p>
+            <h4>Price: $1300-$1500</h4>
+            <button><a href="#">Book Now</a></button>
+          </div>
+        </div>
+        <div class="img-container img-2">
+          <div class="img-text">
+            <p>
+              <img src="Images/Frame.svg" alt="" /><span>7 Day / 6 Night</span
+              ><img src="Images/Frame (1).svg" alt="" /><span>Max : 10</span
+              ><img src="Images/Frame (2).svg" alt="" /><span>Turky</span>
+            </p>
+            <h3>Tour To Satorini</h3>
+            <p>
+              Seeking luxury and style? Embark on one of our catamaran cruises
+              and enjoy unique moments that you will treasure forever!
+            </p>
+            <h4>Price: $1300-$1500</h4>
+            <button><a href="#">Book Now</a></button>
+          </div>
+        </div>
+        <div class="img-container img-3">
+          <div class="img-text">
+            <p>
+              <img src="Images/Frame.svg" alt="" /><span>7 Day / 6 Night</span
+              ><img src="Images/Frame (1).svg" alt="" /><span>Max : 10</span
+              ><img src="Images/Frame (2).svg" alt="" /><span>Malaysia</span>
+            </p>
+            <h3>Tour To Satorini</h3>
+            <p>
+              Discover Santorini's secrets by joining our Bus Tours &
+              Activities.
+            </p>
+            <h4>Price: $1300-$1500</h4>
+            <button><a href="#">Book Now</a></button>
+          </div>
+        </div>
+        <button class="deals-btn"><a href="#">See All Packages</a></button>
+      </section>
+
       <section id="cliant-review">
         <h2 class="title font-size-40">Honest Review</h2>
         <p>
