--- a/index.html
+++ b/index.html
@@ -252,7 +252,10 @@
                   ><img src="Images/Flag_of_Bangladesh.svg.png" alt="" /></span
                 >Bangladesh
               </h3>
-              <img src="images/images.jfif" alt="Avatar" />
+              <img
+                src="images/BDcd8641754081d6fafbba4b9908aab66a.png"
+                alt="Avatar"
+              />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Adam Smith
@@ -279,7 +282,7 @@
                 <span><img src="Images/Flag_of_Malaysia.svg" alt="" /></span
                 >Malaysia
               </h3>
-              <img src="images/images (1).jfif" alt="Avatar" />
+              <img src="images/images (1).png" alt="Avatar" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Samantha
@@ -304,7 +307,7 @@
                 <span><img src="Images/Flag_of_Egypt.svg.png" alt="" /></span
                 >Egypt
               </h3>
-              <img src="images/images (2).jfif" alt="Avatar" />
+              <img src="images/images (2).png" alt="Avatar" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Jonathon
