--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
               </h3>
               <img
                 src="images/BDcd8641754081d6fafbba4b9908aab66a.png"
-                alt="Avatar"
+                alt="Beautiful_Bangladesh"
               />
               <div class="card-body">
                 <h4 class="card-title">
@@ -282,7 +282,7 @@
                 <span><img src="Images/Flag_of_Malaysia.svg" alt="" /></span
                 >Malaysia
               </h3>
-              <img src="images/images (1).png" alt="Avatar" />
+              <img src="images/images (1).png" alt="Beautiful_Malaysia" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Samantha
@@ -307,7 +307,7 @@
                 <span><img src="Images/Flag_of_Egypt.svg.png" alt="" /></span
                 >Egypt
               </h3>
-              <img src="images/images (2).png" alt="Avatar" />
+              <img src="images/images (2).png" alt="Beautiful_Egypt" />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Jonathon
