--- a/index.html
+++ b/index.html
@@ -249,11 +249,13 @@
             <div class="card">
               <h3>
                 <span
-                  ><img src="Images/Flag_of_Bangladesh.svg.png" alt="" /></span
+                  ><img
+                    src="./Images/Flag_of_Bangladesh.svg.png"
+                    alt="" /></span
                 >Bangladesh
               </h3>
               <img
-                src="images/BDcd8641754081d6fafbba4b9908aab66a.png"
+                src="./images/BDcd8641754081d6fafbba4b9908aab66a.png"
                 alt="Beautiful_Bangladesh"
               />
               <div class="card-body">
@@ -279,10 +281,13 @@
             </div>
             <div class="card">
               <h3>
-                <span><img src="Images/Flag_of_Malaysia.svg" alt="" /></span
+                <span><img src="./Images/Flag_of_Malaysia.svg" alt="" /></span
                 >Malaysia
               </h3>
-              <img src="images/images (1).png" alt="Beautiful_Malaysia" />
+              <img
+                src="./images/Thailand-For-2022-.jpg"
+                alt="Beautiful_Malaysia"
+              />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Samantha
@@ -304,10 +309,13 @@
             </div>
             <div class="card">
               <h3>
-                <span><img src="Images/Flag_of_Egypt.svg.png" alt="" /></span
+                <span><img src="./Images/Flag_of_Egypt.svg.png" alt="" /></span
                 >Egypt
               </h3>
-              <img src="images/images (2).png" alt="Beautiful_Egypt" />
+              <img
+                src="./images/Intrepid-Travel-egypt_cairo_traveller-pyramid.jpg"
+                alt="Beautiful_Egypt"
+              />
               <div class="card-body">
                 <h4 class="card-title">
                   <i class="fa-solid fa-user"> </i> Jonathon
